--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://walidmenghour.github.io/my-portfolio",
+  "homepage": "http://walidmenghour.github.io",
   "name": "walid_menghour_profile",
   "version": "0.1.0",
   "private": true,
